--- a/public/assets/css/jet_style.css
+++ b/public/assets/css/jet_style.css
@@ -1,3 +1,16 @@
+/*
+	Author: Armando Gautreaux
+	Template: Fly-Away
+	Version: 0.1
+	GITHUB: https://github.com/uta200105/FlyAway
+*/
+
+/*
+========================================
+1. General Styles
+========================================
+*/
+
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i');
 
 body {
@@ -38,38 +51,8 @@ body {
   padding-top: 40px;
 }
 
-.flights-list {
-  padding-top: 120px;
-  font-family: 'PT Sans', sans-serif;
-}
-.form-border {
-  border: #008ed6 1px solid;
-}
-
-.data-form {
-  padding-top: 80px;
-  font-family: 'PT Sans', sans-serif;
-}
-
-.reservation {
-  padding-top: 80px;
-  font-family: 'PT Sans', sans-serif;
-  padding-bottom: 80px;
-}
-
-.not-found {
-  padding: 300px 0 150px 0;
-  font-family: 'PT Sans', sans-serif;
-}
-
 .card-form {
   opacity: 0.9;
-}
-
-.aside-purchase {
-  margin-top: 75px;
-  padding-top: 80px;
-  font-family: 'PT Sans', sans-serif;
 }
 
 .fa {
@@ -97,9 +80,11 @@ body {
   cursor: pointer;
 }
 
-select {
-  font-family: 'Font Awesome\ 5 Brands', 'arial';
-}
+/*
+========================================
+2. MEDIA AND CAROUSEL
+========================================
+*/
 
 @media (min-width: 1199px) {
   .port-item {
@@ -204,4 +189,54 @@ select {
     display: block;
     visibility: visible;
   }
+}
+
+/*
+========================================
+2. FLIGHTS.handlebars
+========================================
+*/
+.flights-list {
+  padding-top: 120px;
+  font-family: 'PT Sans', sans-serif;
+}
+.form-border {
+  border: #008ed6 1px solid;
+}
+
+/*
+========================================
+2. PURCHASE.handlebars
+========================================
+*/
+.data-form {
+  padding-top: 80px;
+  font-family: 'PT Sans', sans-serif;
+}
+
+.aside-purchase {
+  margin-top: 75px;
+  padding-top: 80px;
+  font-family: 'PT Sans', sans-serif;
+}
+
+/*
+========================================
+3. RESERVATION.handlebars
+========================================
+*/
+.reservation {
+  padding-top: 80px;
+  font-family: 'PT Sans', sans-serif;
+  padding-bottom: 80px;
+}
+
+/*
+========================================
+3. NOTFOUND.handlebars
+========================================
+*/
+.not-found {
+  padding: 300px 0 150px 0;
+  font-family: 'PT Sans', sans-serif;
 }
